tests/ui/issues/issue-16683.stderr
error: lifetime may not live long enough
  --> $DIR/issue-16683.rs:4:9
   |
LL | trait T<'a> {
   |         -- lifetime `'a` defined here
LL |     fn a(&'a self) -> &'a bool;
LL |     fn b(&self) {
   |          - let's call the lifetime of this reference `'1`
LL |         self.a();
   |         ^^^^^^^^ argument requires that `'1` must outlive `'a`

error: aborting due to previous error

